Conserto do gravar dos parceiros, função registrar obra feira e começo da alocar parceiros
